recursion.lessons.recursion.koch.Koch.scala.error
Koch:17: error: reassignment to val
		length = length/3;
                       ^