recursion.lessons.recursion.koch.Koch.scala.code
def snowFlake (levels:Int, length:Double) {
    snowSide(levels, length);
    right(120);
    setColor(Color.blue);
    snowSide(levels, length);
    right(120);
    setColor(Color.orange);
    snowSide(levels, length);
    right(120);
}
def snowSide(levels:Int, length:Double) {
	if(levels == 0) {
		avance(length);
	}
	else {
		length = length/3;
		var angle=360/3;
		
		avance(length);
		gauche(angle);
		snowSide(levels-1, length);

		droite(2*angle);
		snowSide(levels-1, length);

		gauche(angle);
		avance(length);
	}
}
